--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+com.github.ronnydo.colorpicker (0.9.2) xenial; urgency=medium
+
+  * Fix issue #9
+  
+ -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 23 Jun 2017 17:1545:00 +0100
+
 com.github.ronnydo.colorpicker (0.9.1) xenial; urgency=medium
 
   * Fix issue #8
