--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
+com.github.ronnydo.colorpicker (0.9.3) xenial; urgency=medium
+
+  * Color Picker now restores your recent window position, color format color history! (issue #10, issue #11 and issue #15)
+  * Minor icon changes
+  
+ -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 26 Jun 2017 22:45:00 +0100
+
 com.github.ronnydo.colorpicker (0.9.2) xenial; urgency=medium
 
   * Fix issue #9
   
- -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 23 Jun 2017 17:1545:00 +0100
+ -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 23 Jun 2017 17:15:00 +0100
 
 com.github.ronnydo.colorpicker (0.9.1) xenial; urgency=medium
 
