update release notes for v1.0.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 com.github.ronnydo.colorpicker (1.0.1) xenial; urgency=medium
 
+  * Implement "Don't add the same color to color history twice" (issue #24)
+  
+ -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 20 Aug 2017 13:30:00 +0100
+
+com.github.ronnydo.colorpicker (1.0.1) xenial; urgency=medium
+
   * Improvements to avoid issue #19
   
  -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 13 Jul 2017 01:45:00 +0100
