Provide Catalan translation; update Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -8,25 +8,24 @@ msgstr ""
 "Project-Id-Version: com.github.ronnydo.colorpicker\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-10-20 20:40-0500\n"
-"PO-Revision-Date: 2017-10-20 20:40-0500\n"
-"Last-Translator: Juan Velandia <juankz.github.io>\n"
+"PO-Revision-Date: 2018-03-25 01:37-0600\n"
+"Last-Translator: Adolfo Jayme Barrientos <fitojb@ubuntu.com>\n"
 "Language-Team: Spanish\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 2.0.6\n"
 
 msgid "Color Picker"
-msgstr "Selector de Color"
-
+msgstr "Selector de colores"
 
 msgid "Pick Color"
-msgstr "Selecciona un color"
-
+msgstr "Seleccione un color"
 
 msgid "Format"
 msgstr "Formato"
 
 msgid "Color History"
-msgstr "Historial de color"
+msgstr "Historial de colores"
