--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,23 @@
+com.github.ronnydo.colorpicker (1.1.0) bionic; urgency=medium
+
+  * Juno Release!!1! (finally)
+  * "Olá em português" (Translation by @drom98)
+  
+ -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 02 Jan 2019 20:31:00 +0100
+
 com.github.ronnydo.colorpicker (1.0.5) xenial; urgency=medium
 
   * Implement 'close with right-mouse-button' feature (issue #27)
   * Update icon
   * Add French, Spanish and Catalan translation
   
- -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 27 Apr 2017 18:31:00 +0100
+ -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 27 Apr 2018 18:31:00 +0100
  
 com.github.ronnydo.colorpicker (1.0.4) xenial; urgency=medium
 
   * fix version conflicts
   
- -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 27 Apr 2017 13:31:00 +0100
+ -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 27 Apr 2018 13:31:00 +0100
  
 com.github.ronnydo.colorpicker (1.0.3) xenial; urgency=medium
 
@@ -18,7 +25,7 @@ com.github.ronnydo.colorpicker (1.0.3) xenial; urgency=medium
   * Update icon
   * Add French, Spanish and Catalan translation
   
- -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 26 Apr 2017 13:31:00 +0100
+ -- Ronny Dobra <ronnydobra at arcor dot de>  Thu, 26 Apr 2018 13:31:00 +0100
  
 com.github.ronnydo.colorpicker (1.0.2) xenial; urgency=medium
 
