--- a/po/fr.po
+++ b/po/fr.po
@@ -1,5 +1,5 @@
 # French translations for com.github.ronnydo.colorpicker package.
-# Copyright (C) 2017 THE com.github.ronnydo.colorpicker'S COPYRIGHT HOLDER
+# Copyright (C) 2019 THE com.github.ronnydo.colorpicker'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the com.github.ronnydo.colorpicker package.
 # Ronny Dobra <ronnydobra at arcor dot de>, 2017.
 #
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: com.github.ronnydo.colorpicker\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-10 21:48-0200\n"
-"PO-Revision-Date: 2018-04-10 21:48-0200\n"
-"Last-Translator: Arthur Soulié <arthur.soulie@tuta.io>\n"
+"PO-Revision-Date: 2019-01-24 20:27+0100\n"
+"Last-Translator: NathanBnm\n"
 "Language-Team: French\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -22,7 +22,7 @@ msgstr "Color Picker"
 
 
 msgid "Pick Color"
-msgstr "Sélectionnez une Couleur"
+msgstr "Sélectionner une Couleur"
 
 
 msgid "Format"
