--- a/po/tr.po
+++ b/po/tr.po
@@ -1,17 +1,17 @@
-# Turkisj translations for com.github.ronnydo.colorpicker package.
+# Turkish translations for com.github.ronnydo.colorpicker package.
 # Copyright (C) 2019 THE com.github.ronnydo.colorpicker'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the com.github.ronnydo.colorpicker package.
-# Ronny Dobra <ronnydobra at arcor dot de>, 2017.
+# Önder Bakırtaş <onderbakirtas at gmail dot com>, 2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: com.github.ronnydo.colorpicker\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-06-21 20:40-0700\n"
-"PO-Revision-Date: 2017-06-21 20:40-0700\n"
-"Last-Translator: Ronny Dobra <ronnydobra at arcor dot de>\n"
-"Language-Team: German\n"
-"Language: de\n"
+"PO-Revision-Date: 2019-09-17 20:40-0700\n"
+"Last-Translator: Önder Bakırtaş <onderbakirtas at gmail dot com>\n"
+"Language-Team: Turkish\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
