--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+com.github.ronnydo.colorpicker (1.1.3) bionic; urgency=medium
+
+  * Added Polish translation (kudos to @michalzkosmosu)
+  * Added Dutch translation (kudos to @Vistaus)
+  * Added Turkish translation (kudos to @ibrakap)
+  * Fix build integration (kudos to @meisenzahl)
+  
+ -- Ronny Dobra <ronnydobra@arcor.de>  Thu, 02 Jan 2020 20:31:00 +0100
+
+
 com.github.ronnydo.colorpicker (1.1.2) bionic; urgency=medium
 
   * Juno Release!!1! (finally)
