--- a/po/bg.po
+++ b/po/bg.po
@@ -1,33 +1,34 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the com.github.danrabbit.nimbus package.
-# clappingmonkey <clappingmonkey33@gmail.com>, 2020.
+# Bulgarian translations for com.github.ronnydo.colorpicker package.
+# Copyright (C) 2020 THE com.github.ronnydo.colorpicker'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the com.github.ronnydo.colorpicker package.
+# clappingmonkey <clappingmonkey@gmail.com>, 2020.
 #
-#, fuzzy
-
 msgid ""
 msgstr ""
 "Project-Id-Version: com.github.ronnydo.colorpicker\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-06-21 20:40-0700\n"
-"PO-Revision-Date: 2020-02-17 13:00+0300\n"
+"POT-Creation-Date: 2020-05-14 18:18+0200\n"
+"PO-Revision-Date: 2020-05-14 18:11+0200\n"
 "Last-Translator: clappingmonkey <clappingmonkey@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: Bulgarian\n"
+"Language-Team: none\n"
+"Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+#: src/ColorPickerWindow.vala:31
 msgid "Color Picker"
 msgstr "Color Picker"
 
-
+#: src/ColorPickerWindow.vala:52
 msgid "Pick Color"
 msgstr "Избери Цвят"
 
-
+#: src/ColorPickerWindow.vala:71
 msgid "Format"
 msgstr "Формат"
 
+#: src/ColorPickerWindow.vala:105
 msgid "Color History"
 msgstr "История"
