--- a/po/ca.po
+++ b/po/ca.po
@@ -1,31 +1,33 @@
-# Catalan translation for ColorPicker.
-# Copyright (C) 2018 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the ColorPicker package.
-# Adolfo Jayme Barrientos <fitojb@ubuntu.com>, 2018.
+# Catalan translations for com.github.ronnydo.colorpicker package.
+# Copyright (C) 2020 THE com.github.ronnydo.colorpicker'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the com.github.ronnydo.colorpicker package.
+# Adolfo Jayme Barrientos <fitojb@ubuntu.com, 2018.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: com.github.ronnydo.colorpicker\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-06-21 20:40-0700\n"
-"PO-Revision-Date: 2018-03-25 01:39-0600\n"
-"Language-Team: \n"
+"POT-Creation-Date: 2020-05-14 18:18+0200\n"
+"PO-Revision-Date: 2020-05-14 18:12+0200\n"
+"Last-Translator: Adolfo Jayme Barrientos <fitojb@ubuntu.com\n"
+"Language-Team: none\n"
+"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.6\n"
-"Last-Translator: Adolfo Jayme Barrientos <fitojb@ubuntu.com>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: ca\n"
 
+#: src/ColorPickerWindow.vala:31
 msgid "Color Picker"
 msgstr "Selector de colors"
 
+#: src/ColorPickerWindow.vala:52
 msgid "Pick Color"
 msgstr "Trieu un color"
 
+#: src/ColorPickerWindow.vala:71
 msgid "Format"
 msgstr "Format"
 
+#: src/ColorPickerWindow.vala:105
 msgid "Color History"
 msgstr "Historial de colors"
