--- a/po/fr.po
+++ b/po/fr.po
@@ -1,32 +1,34 @@
 # French translations for com.github.ronnydo.colorpicker package.
-# Copyright (C) 2019 THE com.github.ronnydo.colorpicker'S COPYRIGHT HOLDER
+# Copyright (C) 2020 THE com.github.ronnydo.colorpicker'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the com.github.ronnydo.colorpicker package.
-# Ronny Dobra <ronnydobra at arcor dot de>, 2017.
+# Nathan Bonnemains (@NathanBnm), 2020.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: com.github.ronnydo.colorpicker\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-10 21:48-0200\n"
-"PO-Revision-Date: 2019-01-24 20:27+0100\n"
-"Last-Translator: NathanBnm\n"
-"Language-Team: French\n"
+"POT-Creation-Date: 2020-05-14 18:18+0200\n"
+"PO-Revision-Date: 2020-05-14 18:12+0200\n"
+"Last-Translator: Nathan Bonnemains (@NathanBnm)\n"
+"Language-Team: none\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+#: src/ColorPickerWindow.vala:31
 msgid "Color Picker"
-msgstr "Color Picker"
+msgstr "Sélecteur de couleur"
 
-
+#: src/ColorPickerWindow.vala:52
 msgid "Pick Color"
 msgstr "Sélectionner une Couleur"
 
-
+#: src/ColorPickerWindow.vala:71
 msgid "Format"
 msgstr "Format"
 
+#: src/ColorPickerWindow.vala:105
 msgid "Color History"
-msgstr "Historique des Couleurs"
+msgstr "Historique des couleurs"
