--- a/po/nl.po
+++ b/po/nl.po
@@ -1,31 +1,34 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the com.github.danrabbit.nimbus package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Dutch translations for com.github.ronnydo.colorpicker package.
+# Copyright (C) 2020 THE com.github.ronnydo.colorpicker'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the com.github.ronnydo.colorpicker package.
+# Heimen Stoffels <vistausss@outlook.com>, 2020.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: com.github.ronnydo.colorpicker\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-06-21 20:40-0700\n"
-"PO-Revision-Date: 2019-11-09 14:16+0100\n"
-"Language-Team: \n"
+"POT-Creation-Date: 2020-05-14 18:18+0200\n"
+"PO-Revision-Date: 2020-05-14 18:12+0200\n"
+"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
+"Language-Team: none\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.4\n"
-"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: nl\n"
 
+#: src/ColorPickerWindow.vala:31
 msgid "Color Picker"
 msgstr "Kleurkiezer"
 
+#: src/ColorPickerWindow.vala:52
 msgid "Pick Color"
 msgstr "Kleur kiezen"
 
+#: src/ColorPickerWindow.vala:71
 msgid "Format"
 msgstr "Opmaak"
 
+#: src/ColorPickerWindow.vala:105
 msgid "Color History"
 msgstr "Geschiedenis"
